fix(context-menu): keep the context menu text aligned

--- a/src/renderer/src/components/context-menu/ContextMenu.module.scss
+++ b/src/renderer/src/components/context-menu/ContextMenu.module.scss
@@ -1,4 +1,8 @@
 .contextMenu {
+   // Keeps parent from overriding
+   // text alignment.
+   text-align: left;
+
    position: absolute;
 
    outline: none;
